--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <body>
 <h1>Hello World</h1>
-<p>I'm hosted with Github pages</p>
+<p>Welcome to Shadel.ninja!</p>
+<img src="ninja.png" width = "100" height = "100">
 </body>
 </html>
