--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1>Hello World</h1>
+<h1>Shadel.ninja</h1>
 <p>Welcome to Shadel.ninja!</p>
 <img src="ninja.png" width = "756" height = "1024">
 </body>
