--- a/index.html
+++ b/index.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
 <html>
-<body>
+<body style="background-color:tomato;">
+
 <h1>Shadel.ninja</h1>
 <p>Welcome to Shadel.ninja!</p>
 <img src="ninja.png" width = "756" height = "1024">
+
 </body>
 </html>
