--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<body style="background-color:tomato;">
+<body style="background-color:mediumslateblue;">
 
 <h1>Shadel.ninja</h1>
 <p>Welcome to Shadel.ninja!</p>
