--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <body style="background-color:mediumslateblue;">
 
-<h1>Shadel.ninja</h1>
+<h1>Shadel's Ninja Dojo'</h1>
 <p>Welcome to Shadel.ninja!</p>
 <img src="ninja.png" width = "756" height = "1024">
 
