--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html>
 <body style="background-color:mediumslateblue;">
 
-<h1>Shadel's Ninja Dojo'</h1>
-<p>Welcome to Shadel.ninja!</p>
-<img src="ninja.png" width = "756" height = "1024">
+<h1><center>Shadel's Ninja Dojo'</center></h1>
+<p><center>Welcome to Shadel.ninja!</center></p>
+<center><img src="ninja.png" width = "756" height = "1024"></center>
 
 </body>
 </html>
