--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <body style="background-color:mediumslateblue;">
 
-<h1><center>Shadel's Ninja Dojo'</center></h1>
+<h1><center>Shadel's Ninja Dojo</center></h1>
 <p><center>Welcome to Shadel.ninja!</center></p>
 <center><img src="ninja.png" width = "756" height = "1024"></center>
 
