--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
 <h1><center>Shadel's Ninja Dojo</center></h1>
 <p><center>Welcome to Shadel.ninja!</center></p>
-<center><img src="ninja.png" width = "756" height = "1024"></center>
+<img src="ninja.png" width = "756" height = "1024">
 
 </body>
 </html>
