--- a/index.html
+++ b/index.html
@@ -4,7 +4,14 @@
 
 <h1><center>Shadel's Ninja Dojo</center></h1>
 <p><center>Welcome to Shadel.ninja!</center></p>
-<img src="ninja.png" width = "756" height = "1024">
+<div class="row">
+    <div class="column">
+      <img src="ninja.png" width="756" height="1024">
+    </div>
+    <div class="column">
+      <img src="dragon.jpg" width="1000" height="982">
+    </div>
+</div>
 
 </body>
 </html>
