--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <img src="ninja.png" width="756" height="1024">
     </div>
     <div class="column">
-      <img src="dragon.jpg" width="1000" height="982">
+      <img src="dragon.png" width="800" height="800">
     </div>
 </div>
 
