--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
 <p><center>Welcome to Shadel.ninja!</center></p>
 <div class="row">
     <div class="column">
-      <img src="ninja.png" width="756" height="1024">
+      <img src="ninja.png" width="756" height="1024" style="width:100%">
     </div>
     <div class="column">
-      <img src="dragon.png" width="800" height="800">
+      <img src="dragon.png" width="800" height="800" style="width:100%">
     </div>
 </div>
 
