--- a/index.html
+++ b/index.html
@@ -6,10 +6,12 @@
 <p><center>Welcome to Shadel.ninja!</center></p>
 <div class="row">
     <div class="column">
-      <img src="ninja.png" width="756" height="1024" style="width:100%">
+      <img src="ninja.png" width="200" height="200" style="width:100%">
+      <!-- <img src="ninja.png" width="756" height="1024" style="width:100%"> -->
     </div>
     <div class="column">
-      <img src="dragon.png" width="800" height="800" style="width:100%">
+      <img src="dragon.png" width="200" height="200" style="width:100%">
+      <!-- <img src="dragon.png" width="800" height="800" style="width:100%"> -->
     </div>
 </div>
 
