--- a/python.html
+++ b/python.html
@@ -3,7 +3,8 @@
 
 <body style="background-color:mediumslateblue;">
 
-<h1><center>Python</center></h1>
+<a href="https://firebolt195.github.io">Back</a>
+<h2><center>Python</center></h1>
 
 
 </body>
