--- a/404.html
+++ b/404.html
@@ -1,1 +1,3 @@
-<title>YO PAGE NOT FOUND DAWG</title>
+<title>UH OH</title>
+<h1><center>looks like the page was not found dawg</center></h1>
+<h2><center>check your URL broski</center></h2>
