--- a/404.html
+++ b/404.html
@@ -1,4 +1,4 @@
 <title>UH OH</title>
-<h1><center>looks like the page was not found dawg</center></h1>
-<h2><center>check your URL broski</center></h2>
+<h1><center>It looks like the page was not found dawg</center></h1>
+<h2><center>Check your URL and enjoy this meme</center></h2>
 <img src="404image.png" width="1500" height="1000">
