--- a/404.html
+++ b/404.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 
-<script>src=randomImage.js</script>
+<script>src="randomImage.js"</script>
 <title>UH OH</title>
 
 <body>
