--- a/404.html
+++ b/404.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
 <html>
-
-<script>src="randomImage.js"</script>
-<title>UH OH</title>
+    
+<head>
+    <script>src="randomImage.js"</script>
+    <title>UH OH</title>
+</head>
 
 <body>
     <h1><center>It looks like the page was not found dawg</center></h1>
