--- a/404.html
+++ b/404.html
@@ -2,7 +2,7 @@
 <html>
     
 <head>
-    <script>src="randomImage.js"</script>
+    <script src="randomImage.js"></script>
     <title>UH OH</title>
 </head>
 
