--- a/404.html
+++ b/404.html
@@ -9,7 +9,7 @@
 <body>
     <h1><center>It looks like the page was not found dawg</center></h1>
     <h2><center>Check your URL and enjoy this meme</center></h2>
-    <center><img src="memes/404image.png" width="300" height="300" id="myPicture" alt="meme image"></center>
+    <center><img width="300" height="300" id="myPicture" alt="meme image"></center>
 </body>
 
 </html>
