--- a/404.html
+++ b/404.html
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-    <h1><center>It looks like the page was not found dawg</center></h1>
+    <h1><center>It looks like the page was not found</center></h1>
     <h2><center>Check your URL and enjoy this meme</center></h2>
     <center><img width="300" height="300" id="myPicture" alt="meme image"></center>
 </body>
