--- a/calculator.html
+++ b/calculator.html
@@ -4,7 +4,7 @@
 <body style="background-color:mediumslateblue;">
 
 <a href="https://firebolt195.github.io">Back</a>
-<h2><center>Python</center></h1>
+<h2><center>Calculator</center></h1>
 
 
 </body>
