--- a/calculator.html
+++ b/calculator.html
@@ -5,7 +5,7 @@
 
 <a href="https://firebolt195.github.io">Back</a>
 <h2><center>Calculator</center></h1>
-
+<center><button type="button" onclick="alert('button says hello')">click</button></center>
 
 </body>
 
