--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
 
 <h2><center>Table of Contents</center></h2>
-<center><a href="https://firebolt195.github.io/python.html">Python</a></center>
+<center><a href="https://firebolt195.github.io/calculator.html">Calculator</a></center>
 </body>
 
 </html>
