--- a/calculator.html
+++ b/calculator.html
@@ -5,7 +5,40 @@
 
 <a href="https://firebolt195.github.io">Back</a>
 <h2><center>Calculator</center></h1>
-<center><button type="button" onclick="alert('button says hello')">click</button></center>
+    <div class="row">
+        <div class="column">
+            <button type="button" onclick="alert('button says hello')">click</button>
+        </div>
+        <div class="column">
+            <button type="button" onclick="alert('button says hello')">click</button>
+        </div>
+        <div class="column">
+            <button type="button" onclick="alert('button says hello')">click</button>
+        </div>
+    </div>
+    <div class="row">
+        <div class="column">
+            <button type="button" onclick="alert('button says hello')">click</button>
+        </div>
+        <div class="column">
+            <button type="button" onclick="alert('button says hello')">click</button>
+        </div>
+        <div class="column">
+            <button type="button" onclick="alert('button says hello')">click</button>
+        </div>
+    </div>
+    <div class="row">
+        <div class="column">
+            <button type="button" onclick="alert('button says hello')">click</button>
+        </div>
+        <div class="column">
+            <button type="button" onclick="alert('button says hello')">click</button>
+        </div>
+        <div class="column">
+            <button type="button" onclick="alert('button says hello')">click</button>
+        </div>
+    </div>
+
 
 </body>
 
